jerry-core/parser/js/new-parser/tests/js/strict-mode/function-strict-restricts-arguments.js
/* This test contains strict mode test, whether function strict mode
 * restricts argument list.
 */

function strict_mode(eval) {
  "use strict";
}
